Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +281,7 @@
     "# calculate eigendecomposition\n",
     "values, vectors = eig(A)\n",
     "print(values)\n",
-    "print(vectors)"
+    "print(vectors)\n"
    ]
   },
   {
