--- a/index.ipynb
+++ b/index.ipynb
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,17 @@
     }
    ],
    "source": [
-    "# Code here "
+    "# Code here \n",
+    "from numpy.linalg import inv\n",
+    "# create matrix from eigenvectors\n",
+    "Q = vectors\n",
+    "# create inverse of eigenvectors matrix\n",
+    "R = inv(Q)\n",
+    "# create diagonal matrix from eigenvalues\n",
+    "L = np.diag(values)\n",
+    "# reconstruct the original matrix\n",
+    "B = Q.dot(L).dot(R)\n",
+    "print(B)"
    ]
   },
   {
